--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m venv wormgpt-env
         source wormgpt-env/bin/activate
+        pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run tests
