--- a/.github/workflows/Python-tests.yml
+++ b/.github/workflows/Python-tests.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Specify your project's Python version
+        python-version: '3.1'  # Specify your project's Python version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
