--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+- name: Run tests
+  run: |
+    pytest -v
+
+
+- name: List directory
+  run: ls -R
