--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,21 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
+
+    - name: Create virtual environment
+      run: python -m venv wormgpt-env
+
+    - name: Upgrade pip
+      run: |
+        source wormgpt-env/bin/activate
+        python -m pip install --upgrade pip
+
+    - name: Check `requirements.txt`
+      run: |
+        ls -l
+        cat requirements.txt
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
